--- a/springmvc_mybatis_demo/src/main/resources/config.properties
+++ b/springmvc_mybatis_demo/src/main/resources/config.properties
@@ -3,3 +3,5 @@ validationQuery=SELECT 1
 jdbc.url=jdbc:mysql://localhost:3306/shop?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=
+dffd
+\u5730\u65B9\u53CA\u5730\u65B9
