--- a/springmvc_mybatis_demo/src/main/resources/config.properties
+++ b/springmvc_mybatis_demo/src/main/resources/config.properties
@@ -4,3 +4,5 @@ jdbc.url=jdbc:mysql://localhost:3306/shop?useUnicode=true&amp;characterEncoding=
 jdbc.username=root
 jdbc.password=
 jdbc.type=sdf
+
+platform.url=locahost:8088
